Fixed visibility on the calculated currency exchange container.
And visibilty and opacity transitions.

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ input[type='number'] {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 340px;
+  height: 430px;
 }
 .main-input-container {
   display: flex;
@@ -59,6 +59,15 @@ input[type='number'] {
   align-items: center;
   justify-content: center;
   width: 100%;
+  height: 110px;
+}
+
+#span-price-container {
+  height: 60px;
+  cursor: default;
+  visibility: none;
+  transition-property: visibility;
+  transition-duration: 0.2s;
 }
 
 #price-calc {
@@ -92,8 +101,8 @@ input[type='number'] {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  height: 125px;
+  justify-content: space-evenly;
+  height: 190px;
 }
 
 #calc-btn {
